--- a/scss/admin/eds-admin-style.scss
+++ b/scss/admin/eds-admin-style.scss
@@ -11,110 +11,781 @@ $eds-text-black: #000000;
 
 
 // General Styles
+body {
+  background-color: #e8e9f4;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.eds-wrap {
+#eds_content {
+  /* COLORS and TYPOGRAPHY */
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+
+  /* PAGE LAYOUT */
+  min-width: 100%;
+  max-width: 100vw; /* Limiter la largeur maximale */
+  margin: 0 auto; /* Centrer le contenu */
+  padding: 2rem;
+  box-sizing: border-box; /* Inclure les paddings et les bordures dans la largeur totale */
+
+  /* VERTICAL SECTIONS */
   display: flex;
   flex-direction: column;
-  background-color: $eds-bg-light;
-  font-family: Helvetica, Arial, sans-serif;
-}
+  flex-wrap: nowrap;
+  justify-content: normal;
+  align-items: stretch;
+  align-content: flex-start;
 
-.eds-admin-container {
-  margin: 0 auto;
-  width: 100%;
-}
+  .eds-header {
+      display: flex;
+      flex-grow: 0;
+      flex-shrink: 1;
+      flex-basis: 100%;
+      align-self: stretch;
+      order: 0;
 
-// Navigation
-.eds-plugin-navigation {
+      #eds_company {
+          display: block;
+          flex-grow: 0;
+          flex-shrink: 1;
+          flex-basis: 70%;
+          align-self: flex-start;
+          order: 0;
+          font-size: 2rem;
 
-  .eds-navbar-expand-lg {
-    display: flex;
+          .logo {
+              border: 1px dotted #000;
+              padding: 3px 15px;
+          }
+      }
+
+      #eds_search {
+          /* GRID ITEM BEHAVIOR */
+          flex-grow: 1;
+
+          /* STYLISED SEARCH */
+          display: flex;
+          align-items: center;
+          border: 1px solid #dedede;
+          border-radius: 25px;
+          padding: 8px;
+          max-height: 2rem;
+          background-color: #fff;
+          border: 1px solid #aaa;
+          box-sizing: border-box; /* Inclure les paddings et les bordures dans la largeur totale */
+
+          label {
+              margin-right: 10px;
+              padding-left: 10px;
+          }
+
+          input {
+              border: none;
+              outline: none;
+              flex-grow: 1;
+          }
+
+          .search-icon {
+              margin-left: 10px;
+              margin-right: 10px;
+          }
+      }
   }
 
-  .eds-navbar-light {
-    .eds-nav-link {
-      color: #000;
-      &.eds-active {
-        font-weight: bold;
+  .eds-body {
+      display: flex;
+      flex-grow: 0;
+      flex-shrink: 1;
+      flex-basis: auto;
+      align-self: auto;
+      order: 0;
+      border-radius: 1rem;
+
+      /* INNER CONTAINER */
+      background: #fff;
+      border: 1px solid #afafaf;
+      margin: 2rem 0;
+      padding: 0;
+
+      #eds_menu {
+          background-color: #f4f5ff;
+          font-family: "IBM Plex Sans", sans-serif;
+          padding-bottom: 5rem;
+          width: 368px;
+          border-radius: 1rem 0 0 1rem;
+          height: 100%; /* Assurez-vous que le menu occupe toute la hauteur */
+          box-sizing: border-box; /* Inclure les paddings et les bordures dans la hauteur totale */
+          
+          .eds-dashboard-btn {
+              display: block;
+              color: #cccccc;
+              font-size: 24px;
+              font-weight: 400;
+              text-align: center;
+              height: 64px;
+              width: 64px;
+              padding: 1rem;
+              margin-bottom: 1rem;
+              cursor: pointer;
+
+              .eds-icon-background {
+                  fill: #b16ace;
+              }
+
+              .eds-icon-overlay {
+                  fill: #e8e9f4;
+              }
+
+              &:hover .eds-icon-background {
+                  fill: #000000;
+              }
+
+              &:hover .eds-icon-overlay {
+                  fill: #ffffff;
+              }
+          }
+
+          $text-color: #7d84ab;
+$secondary-text-color: #dee2ec;
+
+$bg-color: #0c1e35;
+$secondary-bg-color: #0b1a2c;
+
+$border-color: rgba(#535d7d, 0.3);
+
+$sidebar-header-height: 100px;
+$sidebar-footer-height: 230px;
+
+
+.layout {
+  z-index: 1;
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  }
+  .content {
+    padding: 12px 50px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer {
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: 20px;
+    padding: 20px;
+  }
+}
+
+
+.sidebar {
+  color: $text-color;
+  overflow-x: hidden !important;
+  position: relative;
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+  }
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background-color: lighten($bg-color, 15);
+    }
+  }
+  &::-webkit-scrollbar {
+    width: 6px;
+    background-color: $bg-color;
+  }
+
+  .image-wrapper {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    display: none;
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+  &.has-bg-image .image-wrapper {
+    display: block;
+  }
+
+  .sidebar-layout {
+    height: auto;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    background-color: $bg-color;
+    z-index: 2;
+
+    .sidebar-header {
+      height: $sidebar-header-height;
+      min-height: $sidebar-header-height;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      > span {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+    }
+    .sidebar-content {
+      flex-grow: 1;
+      padding: 10px 0;
+    }
+    .sidebar-footer {
+      height: $sidebar-footer-height;
+      min-height: $sidebar-footer-height;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      > span {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
   }
 }
 
-.eds-brand {
-  font-size: 1.5rem;
-  text-decoration: none;
-}
+@keyframes swing {
+  0%,
+  30%,
+  50%,
+  70%,
+  100% {
+    transform: rotate(0deg);
+  }
 
-.eds-navbar-toggler {
-  border: none;
-  .eds-navbar-toggler-icon {
-    background-image: url('data:image/svg+xml,...');
+  10% {
+    transform: rotate(10deg);
+  }
+
+  40% {
+    transform: rotate(-10deg);
+  }
+
+  60% {
+    transform: rotate(5deg);
+  }
+
+  80% {
+    transform: rotate(-5deg);
   }
 }
 
-// Header
-.eds-header {
-  background-color: $eds-bg-light;
+.layout {
+  .sidebar {
+    .menu {
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+      }
+      .menu-header {
+        font-weight: 600;
+        padding: 10px 25px;
+        font-size: 0.8em;
+        letter-spacing: 2px;
+        transition: opacity 0.3s;
+        opacity: 0.5;
+      }
+      .menu-item {
+        a {
+          display: flex;
+          align-items: center;
+          height: 50px;
+          padding: 0 20px;
+          color: $text-color;
 
-  .eds-container {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+          .menu-icon {
+            font-size: 1.2rem;
+            width: 35px;
+            min-width: 35px;
+            height: 35px;
+            line-height: 35px;
+            text-align: center;
+            display: inline-block;
+            margin-right: 10px;
+            border-radius: 2px;
+            transition: color 0.3s;
+            i {
+              display: inline-block;
+            }
+          }
 
-  .eds-title {
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
+          .menu-title {
+            font-size: 0.9em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            flex-grow: 1;
+            transition: color 0.3s;
+          }
+          .menu-prefix,
+          .menu-suffix {
+            display: inline-block;
+            padding: 5px;
+            opacity: 1;
+            transition: opacity 0.3s;
+          }
+          &:hover {
+            .menu-title {
+              color: $secondary-text-color;
+            }
+            .menu-icon {
+              color: $secondary-text-color;
+              i {
+                animation: swing ease-in-out 0.5s 1 alternate;
+              }
+            }
+            &::after {
+              border-color: $secondary-text-color !important;
+            }
+          }
+        }
 
-  .eds-intro {
-    font-size: 1.2rem;
-    color: gray;
-  }
-}
+        &.sub-menu {
+          position: relative;
+          > a {
+            &::after {
+              content: '';
+              transition: transform 0.3s;
+              border-right: 2px solid currentcolor;
+              border-bottom: 2px solid currentcolor;
+              width: 5px;
+              height: 5px;
+              transform: rotate(-45deg);
+            }
+          }
 
-// Main Content
-.eds-main {
-  padding: 2rem 0;
+          > .sub-menu-list {
+            padding-left: 20px;
+            display: none;
+            overflow: hidden;
+            z-index: 999;
+          }
+          &.open {
+            > a {
+              color: $secondary-text-color;
+              &::after {
+                transform: rotate(45deg);
+              }
+            }
+          }
+        }
 
-  .eds-section {
-    margin-bottom: 3rem;
+        &.active {
+          > a {
+            .menu-title {
+              color: $secondary-text-color;
+            }
+            &::after {
+              border-color: $secondary-text-color;
+            }
+            .menu-icon {
+              color: $secondary-text-color;
+            }
+          }
+        }
+      }
+      > ul > .sub-menu > .sub-menu-list {
+        background-color: $secondary-bg-color;
+      }
 
-    &-title {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+      &.icon-shape-circle,
+      &.icon-shape-rounded,
+      &.icon-shape-square {
+        .menu-item a .menu-icon {
+          background-color: $secondary-bg-color;
+        }
+      }
+
+      &.icon-shape-circle .menu-item a .menu-icon {
+        border-radius: 50%;
+      }
+      &.icon-shape-rounded .menu-item a .menu-icon {
+        border-radius: 4px;
+      }
+      &.icon-shape-square .menu-item a .menu-icon {
+        border-radius: 0;
+      }
     }
 
-    &-content {
-      font-size: 1rem;
-      color: #333;
+    &:not(.collapsed) {
+      .menu > ul {
+        > .menu-item {
+          &.sub-menu {
+            > .sub-menu-list {
+              visibility: visible !important;
+              position: static !important;
+              transform: translate(0, 0) !important;
+            }
+          }
+        }
+      }
     }
 
-    &-sidebar {
-      background-color: $eds-bg-light;
-      padding: 1rem;
-      border-radius: 5px;
+    &.collapsed {
+      .menu > ul {
+        > .menu-header {
+          opacity: 0;
+        }
+        > .menu-item {
+          > a {
+            .menu-prefix,
+            .menu-suffix {
+              opacity: 0;
+            }
+          }
+          &.sub-menu {
+            > a {
+              &::after {
+                content: '';
+                width: 5px;
+                height: 5px;
+                background-color: currentcolor;
+                border-radius: 50%;
+                display: inline-block;
+                position: absolute;
+                right: 10px;
+                top: 50%;
+                border: none;
+                transform: translateY(-50%);
+              }
+              &:hover {
+                &::after {
+                  background-color: $secondary-text-color;
+                }
+              }
+            }
+            > .sub-menu-list {
+              transition: none !important;
+              width: 200px;
+              margin-left: 3px !important;
+              border-radius: 4px;
+              display: block !important;
+            }
+          }
+          &.active {
+            > a {
+              &::after {
+                background-color: $secondary-text-color;
+              }
+            }
+          }
+        }
+      }
+    }
+    &.has-bg-image {
+      .menu {
+        &.icon-shape-circle,
+        &.icon-shape-rounded,
+        &.icon-shape-square {
+          .menu-item a .menu-icon {
+            background-color: rgba($secondary-bg-color, 0.6);
+          }
+        }
+      }
+      &:not(.collapsed) {
+        .menu {
+          > ul > .sub-menu > .sub-menu-list {
+            background-color: rgba($secondary-bg-color, 0.6);
+          }
+        }
+      }
     }
   }
 
-  .eds-row {
-    display: flex;
-    flex-wrap: wrap;
+  &.rtl {
+    .sidebar {
+      .menu {
+        .menu-item {
+          a {
+            .menu-icon {
+              margin-left: 10px;
+              margin-right: 0;
+            }
+          }
 
-    .eds-col {
-      flex: 1;
-      padding: 1rem;
+          &.sub-menu {
+            > a {
+              &::after {
+                transform: rotate(135deg);
+              }
+            }
+
+            > .sub-menu-list {
+              padding-left: 0;
+              padding-right: 20px;
+            }
+            &.open {
+              > a {
+                &::after {
+                  transform: rotate(45deg);
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &.collapsed {
+        .menu > ul {
+          > .menu-item {
+            &.sub-menu {
+              a::after {
+                right: auto;
+                left: 10px;
+              }
+
+              > .sub-menu-list {
+                margin-left: -3px !important;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
 
-// Footer
-.eds-footer {
-  background-color: $eds-bg-dark;
-  color: $eds-text-light;
 
-  .eds-container {
-    text-align: center;
-    padding: 1rem;
+.layout {
+  .sidebar {
+    .pro-sidebar-logo {
+      display: flex;
+      align-items: center;
+
+      > div {
+        width: 35px;
+        min-width: 35px;
+        height: 35px;
+        min-height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        color: white;
+        font-size: 24px;
+        font-weight: 700;
+        background-color: #ff8100;
+        margin-right: 10px;
+      }
+
+      > h5 {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 20px;
+        line-height: 30px;
+        transition: opacity 0.3s;
+        opacity: 1;
+      }
+    }
+
+    .footer-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 0.8em;
+      padding: 20px 0;
+      border-radius: 8px;
+      width: 180px;
+      min-width: 190px;
+      margin: 0 auto;
+      background-color: #162d4a;
+      img.react-logo {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
+      }
+      a {
+        color: #fff;
+        font-weight: 600;
+        margin-bottom: 10px;
+      }
+    }
+
+    .sidebar-collapser {
+      transition: left, right, 0.3s;
+      position: fixed;
+      left: 260px;
+      top: 40px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: #00829f;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2em;
+      transform: translateX(50%);
+      z-index: 111;
+      cursor: pointer;
+      color: white;
+      box-shadow: 1px 1px 4px $bg-color;
+    }
+
+    &.collapsed {
+      .pro-sidebar-logo {
+        > h5 {
+          opacity: 0;
+        }
+      }
+      .footer-box {
+        display: none;
+      }
+      .sidebar-collapser {
+        left: 60px;
+        i {
+          transform: rotate(180deg);
+        }
+      }
+    }
   }
 }
+
+.badge {
+  display: inline-block;
+  padding: 0.25em 0.4em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+  color: #fff;
+  background-color: #6c757d;
+
+  &.primary {
+    background-color: #ab2dff;
+  }
+
+  &.secondary {
+    background-color: #079b0b;
+  }
+}
+
+.sidebar-toggler {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+}
+
+.social-links {
+  a {
+    margin: 0 10px;
+    color: #3f4750;
+  }
+}
+
+      }
+      #eds_content_area {
+          flex: 1;
+          padding: 2rem 4rem;
+          h1, h2, h3, h4, h5, h6 {
+              font-weight: 400;
+              color: #8346aa;
+              margin: 0;
+          }
+          h1 {
+              font-size: 4em;
+              padding-bottom: 2rem;
+          }
+          h2 {
+              font-size: 3.25em;
+              padding-bottom: 1.75rem;
+          }
+          h3 {
+              font-size: 2.50em;
+              padding-bottom: 1.5rem;
+          }
+          h4 {
+              font-size: 1.75em;
+              padding-bottom: 1.25rem;
+          }
+          h5 {
+              font-size: 1.55em;
+              padding-bottom: 1.12rem;
+          }
+          h6 {
+              font-size: 1.15em;
+              padding-bottom: 1rem;
+          }
+          p {
+              font-size: 1.5em;
+              line-height: 1.7;
+              margin: 0;
+              padding-bottom: 1em;
+          }
+          /* PAGE TOOLS BUTTONS STYLES */
+          #save-slider,
+          #new-slider,
+          #delete-slider,
+          #cancel-slider {
+              transition: all 0.3s ease-out;
+
+              &:hover {
+                  transform: scale(1.05);
+                  filter: brightness(1.2);
+              }
+
+              &:active {
+                  transform: scale(0.95);
+                  filter: brightness(0.8);
+              }
+
+              &.mouse-out {
+                  transform: scale(1);
+                  filter: brightness(1);
+              }
+          }
+
+          #save-slider {
+              /* Personnalisez ici si nécessaire */
+          }
+
+          #new-slider {
+              /* Personnalisez ici si nécessaire */
+          }
+
+          #delete-slider {
+              /* Personnalisez ici si nécessaire */
+          }
+
+          #cancel-slider {
+              /* Personnalisez ici si nécessaire */
+          }
+
+      }
+
+  }
+  .eds-footer {
+      display: block;
+      flex-grow: 0;
+      flex-shrink: 1;
+      flex-basis: auto;
+      align-self: auto;
+      order: 0;
+  }
+}
+
